# cavr-demo

./: CMakeLists.txt  README.md
CMakeModules/: FindCAVR.cmake  findCAVR.cmake
Demo/: CMakeLists.txt
Demo/config/: example.lua
Demo/include/: Test.h
Demo/source/: Test.cpp  app.cpp
etc/cavr/schema/input/: analog.lua
